syntax = "proto3";

package artist;

option go_package = "github.com/v0vc/go-music-grpc;artist";

message Artist {
  int64 id = 1;
  uint32 siteId = 2;
  string artistId = 3;
  string title = 4;
  uint32 counter = 5;
  bytes thumbnail = 6;
}

message Album {
  int64 id = 1;
  string albumId = 2;
  string title = 3;
  string releaseDate = 4;
  string releaseType = 5;
  bytes thumbnail = 6;
}

message CreateArtistRequest {
  uint32 siteId = 1;
  string artistId = 2;
}

message CreateArtistResponse {
  int64 id = 1;
  string title = 2;
}

message ReadArtistAlbumRequest {
  int64 id = 1;
}

message ReadArtistAlbumResponse {
  repeated Album releases = 1;
}

message UpdateArtistRequest {
  Artist artist = 1;
}

message UpdateArtistResponse {
  Artist artist = 1;
}

message DeleteArtistRequest {
  int64 id = 1;
}

message DeleteArtistResponse {
  int64 id = 1;
}

message ListArtistRequest {

}

message ListArtistResponse {
  repeated Artist artists = 1;
}

message ListStreamArtistRequest {

}

message ListStreamArtistResponse {
  Artist artist = 1;
}

service ArtistService {
  rpc CreateArtist (CreateArtistRequest) returns (CreateArtistResponse);
  rpc ReadArtistAlbum (ReadArtistAlbumRequest) returns (ReadArtistAlbumResponse);
  rpc UpdateArtist (UpdateArtistRequest) returns (UpdateArtistResponse);
  rpc DeleteArtist (DeleteArtistRequest) returns (DeleteArtistResponse);
  rpc ListArtist (ListArtistRequest) returns (ListArtistResponse);
  rpc ListStreamArtist (ListStreamArtistRequest) returns (stream ListStreamArtistResponse);
}